Revise personal introduction in index.html
Updated personal description and removed extra paragraphs.

--- a/index.html
+++ b/index.html
@@ -65,19 +65,9 @@
             <div class="about-grid">
                 <div class="about-content">
                     <p class="about-lead">
-                        I'm a full-stack developer and designer who believes in the power of 
-                        thoughtful design and clean code to create meaningful digital experiences.
+                      I am a Postgraduate student in Physics at Pondicherry University.
                     </p>
-                    <p>
-                        With expertise in modern web technologies and a keen eye for aesthetics, 
-                        I specialize in building responsive, accessible, and performant applications 
-                        that users love to interact with.
-                    </p>
-                    <p>
-                        When I'm not coding, you'll find me exploring new design trends, 
-                        contributing to open-source projects, or sharing knowledge with the 
-                        developer community.
-                    </p>
+                   
                     <div class="skills-list">
                         <div class="skill-category">
                             <h3>Frontend</h3>
@@ -91,7 +81,7 @@
                         <div class="skill-category">
                             <h3>Backend</h3>
                             <ul>
-                                <li>Node.js</li>
+                                
                                 <li>Python</li>
                                 <li>PostgreSQL</li>
                                 <li>GraphQL</li>
