--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>My Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
@@ -31,15 +31,14 @@
         <div class="hero-background"></div>
         <div class="container">
             <div class="hero-content">
-                <div class="hero-label">Portfolio 2026</div>
+                <div class="hero-label">Hi!</div>
                 <h1 class="hero-title">
                     <span class="hero-title-line">Creative</span>
                     <span class="hero-title-line">Developer &</span>
                     <span class="hero-title-line">Designer</span>
                 </h1>
                 <p class="hero-description">
-                    Crafting digital experiences that blend aesthetic excellence with technical precision.
-                    Based in Chennai, working globally.
+                
                 </p>
                 <div class="hero-cta">
                     <a href="#work" class="btn btn-primary">View Work</a>
